# probtest

./: .coveragerc  .env  .git-blame-ignore-revs  .gitignore  .mch-ci.yml  .pre-commit-config.yaml  AUTHORS.md  Dockerfile  HISTORY.rst  Jenkinsfile  LICENSE  README.md  README.rst  probtest.json  probtest.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  seeds.txt  setup_env.py  setup_env.sh  setup_miniconda.sh  sonar-project.properties  test_reference  tmp_tolerance_None.csv
.github/workflows/: build-container.yml  deploy-container-for-release.yml  pre-commit.yml  pytest.yml
doc/: conf.py  index.rst
engine/: cdo_table.py  check.py  check_fof.py  check_tol_fof.py  fof_compare.py  init.py  optimal_member_sel.py  performance.py  performance_check.py  performance_stats.py  perturb.py  run_ensemble.py  select_members.py  select_optimal_members.py  stats.py  test_selection.py  tolerance.py  tolerance_fof.py
jenkins/: formatter  mergerequest
jenkins/scripts/: pre_commit_formatting.sh  publish_formatting.sh  step_execute_unittest_amip.sh  step_execute_unittest_mch.sh  step_generate_testdata.sh
k8s/base/: cronjob.yaml
k8s/overlays/depl/: kustomization.yaml
k8s/overlays/devt/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
probtest/: probtest.py
probtest/engine/: cdo_table.py  check.py  init.py  performance.py  performance_check.py  perturb.py  run_ensemble.py  select_members.py  stats.py  tolerance.py
probtest/util/: click_util.py  dataframe_ops.py  file_system.py  model_output_parser.py  netcdf_io.py  tree.py  xarray_ops.py
probtest/util/icon/: extract_timings.py
probtest/visualize/: cdo_table_reader.py  check_plot.py  performance_meta_data.py  performance_plot.py
requirements/: dev-environment.yml  dev-requirements.yml  environment.yml  requirements.yml
scripts/: collect_icon_testdata.sh  generate_icon_testdata.sh  poetry_lock.sh  release.sh
templates/: ICON.jinja  granule.jinja  testdata.jinja
test/: conftest.py  helpers.py
test/cli/: test_cdo_table_cli.py  test_performance_cli.py  test_perturb_cli.py  test_stats_cli.py  test_tolerance_cli.py
test/data/: ref_cdo_table.csv  reference_0_data.json  reference_0_tree.json  stats_dp_3.csv  stats_dp_5.csv  stats_dp_8.csv  stats_dp_9.csv  timing_example_1.txt  timing_example_3.txt
test/engine/: test_check.py  test_perturb.py  test_run_ensemble.py  test_select_members.py  test_stats.py
test/util/icon/: test_timing_tree.py
tests/: conftest.py  helpers.py  test_helpers.py
tests/cli/: test_cdo_table_cli.py  test_performance_cli.py  test_perturb_cli.py  test_stats_cli.py  test_tolerance_cli.py  test_tolerance_cli_split.py
tests/data/: add_0_data.json  add_1_data.json  add_1_tree.json  add_2_data.json  add_meta.json  cdo_table.csv  initial_condition.csv  ref_cdo_table.csv  ref_tolerance.csv  reference_0_data.json  reference_1_data.json  reference_1_tree.json  reference_2_data.json  reference_meta.json  stats_dp_1.csv  stats_dp_10.csv  stats_dp_2.csv  stats_dp_3.csv  stats_dp_4.csv  stats_dp_5.csv  stats_dp_6.csv  stats_dp_7.csv  stats_dp_8.csv  stats_dp_9.csv  stats_ref.csv  timing_example_2.txt  timing_example_3.txt  tolerance.csv
tests/e2e/: test_nc_e2e.py  test_pandas_e2e.py  test_perturb_e2e.py  test_tree_e2e.py
tests/engine/: test_cdo_table_cli.py  test_check.py  test_check2.py  test_check_fof.py  test_fof_compare.py  test_fof_utils.py  test_performance_check.py  test_perturb.py  test_run_ensemble.py  test_select_members.py  test_select_optimal_members.py  test_stats.py  test_tolerance_cli.py  test_tolerance_cli_split.py
tests/helpers/: fixtures.py  helpers.py
tests/util/: fixtures.py  test_dataframe_ops.py  test_fof_utils.py  test_log_handler.py  test_model_output_parser.py  test_utils.py  test_visualize_util.py  test_xarray_ops.py
tests/util/icon/: test_timing_tree.py
tests/visualize/: test_check_plot.py
util/: click_util.py  constants.py  dataframe_ops.py  file_system.py  fof_utils.py  log_handler.py  model_output_parser.py  netcdf_io.py  tree.py  utils.py  visualize_util.py  xarray_ops.py
util/icon/: extract_timings.py
visualize/: cdo_table_reader.py  check_plot.py  performance_meta_data.py  performance_plot.py
wrapper/: generate_icon_reference_amip.sh  generate_icon_reference_lam.sh  generate_icon_reference_lam_nest.sh  icon_config_flag_extractor.py
